@@ -5,7 +5,6 @@ import com.mealapp.domain.recipe.entity.RecipeRating;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class RecipeRatingMapper {
@@ -25,6 +24,6 @@ public class RecipeRatingMapper {
     public List<RecipeRatingResponse> toResponseList(List<RecipeRating> ratings) {
         return ratings.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
